--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600');
 
 body {
-    background: url(img/bg.jpg) center/cover no-repeat fixed;
+    background: url(bg.jpg) center/cover no-repeat fixed;
     font-family: 'Titillium Web', sans-serif;
     display: flex;
     min-height: 100vh;
